--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -1,4 +1,13 @@
 {
   "type": "PTE",
-  "templateUrl": "https://github.com/andersgMSFT/AL-Go-PTE@PPPreview"
+  "templateUrl": "https://github.com/microsoft/AL-Go-PTE@PPPreview",
+  "powerPlatformSolutionFolder": "PPTest",
+  "environments": [
+    "Dev"
+  ],
+  "DeployToDev": {
+    "environmentName": "PowerApps",
+    "companyId": "dc50d5e8-f9c9-ed11-94cc-000d3a220b2f",
+    "ppEnvironmentUrl": "https://org1316ffa2.crm.dynamics.com/"
+  }
 }
