--- a/.github/workflows/CICD.yaml
+++ b/.github/workflows/CICD.yaml
@@ -7,7 +7,7 @@ on:
       - '**.md'
       - '.github/workflows/*.yaml'
       - '!.github/workflows/CICD.yaml'
-    branches: [ 'main', 'release/*', 'feature/*' ]
+    branches: [ 'main', 'release/*', 'feature/*', PPPreview ]
 
 defaults:
   run:
